<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Snow"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_header_text"
        android:textSize="30sp"
        android:background="@color/DodgerBlue"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        />

    <TextView
        android:id="@+id/output_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/DimGray"
        android:textSize="30sp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num1_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num2_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num3_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_plus_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num4_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num5_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num6_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_minus_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num7_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num8_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num9_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_multiply_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_clear_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_num0_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_calculate_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_divide_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Gray"
            android:textSize="20sp"
            android:text="@string/btn_mode_text1"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scientific"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/black"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/btn_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_mod_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_pow_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_max_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/DodgerBlue"
            android:text="@string/btn_min_text"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>